changed mssql class init, cleaned up options passing

--- a/options.yml
+++ b/options.yml
@@ -13,6 +13,7 @@
   :deep_scan: false
   :project_homes:
   - \\OKC1GGX0001\e$\East Texas
+  - \\OKC1GGX0006\e$\Oklahoma
   :zzz_project_homes:
   - c:\programdata\geographix\projects
   - \\OKC1GGX0001\e$\Arkansas
