--- a/options.yml
+++ b/options.yml
@@ -12,9 +12,9 @@
 :alerts:
   :deep_scan: false
   :project_homes:
+  - c:\programdata\geographix\projects
   - \\OKC1GGX0001\e$\East Texas
-  - \\OKC1GGX0006\e$\Oklahoma
-  :zzz_project_homes:
+  :just_a_list_to_copy_from:
   - c:\programdata\geographix\projects
   - \\OKC1GGX0001\e$\Arkansas
   - \\OKC1GGX0001\e$\Delaware Basin
@@ -29,5 +29,12 @@
   - \\OKC1GGX0004\e$\Delaware Basin
   - \\OKC1GGX0005\e$\MidCon
   - \\OKC1GGX0006\e$\Oklahoma
+
+:temps:
+  :deep_scan: false
+  :project_homes:
+  - c:\programdata\geographix\projects
+  - \\OKC1GGX0005\e$\MidCon
+  - \\OKC1GGX0001\e$\East Texas
 
 
