raise execption if home.ini is whack

--- a/options.yml
+++ b/options.yml
@@ -13,7 +13,6 @@
   :deep_scan: false
   :project_homes:
   - c:\programdata\geographix\projects
-  - \\OKC1GGX0001\e$\East Texas
   :just_a_list_to_copy_from:
   - c:\programdata\geographix\projects
   - \\OKC1GGX0001\e$\Arkansas
@@ -32,7 +31,9 @@
 
 :temps:
   :deep_scan: false
+  :ignored_project_homes:
+  - \\mimi\Discovery-90830583-001f-44e9-bfe1-990ba47fea57$
+  - c:\programdata\geographix\projects
   :project_homes:
   - c:\programdata\geographix\projects
-
 
