--- a/options.yml
+++ b/options.yml
@@ -42,5 +42,6 @@
   - c:\programdata\geographix\projects
   :project_homes:
   - \\OKC1GGX0001\e$\East Texas
-  - c:\programdata\geographix\projects
+  - \\OKC1GGX0005\e$\MidCon
+  - \\OKC1GGX0006\e$\Oklahoma
 
